# demo-cmake-lib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ModelFoo/: CMakeLists.txt  foo.cpp
ModelFoo/include/: foo.hpp
